--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "axios": "0.18.0",
+    "bootstrap": "4.1.1",
+    "react": "16.4.1",
+    "react-dom": "16.4.1",
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
@@ -15,10 +16,10 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.2",
-    "@types/node": "^10.3.6",
-    "@types/react": "^16.4.2",
-    "@types/react-dom": "^16.0.6",
-    "typescript": "^2.9.2"
+    "@types/jest": "23.1.2",
+    "@types/node": "10.3.6",
+    "@types/react": "16.4.2",
+    "@types/react-dom": "16.0.6",
+    "typescript": "2.9.2"
   }
 }
