--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "0.18.0",
-    "bootstrap": "4.1.1",
     "react": "16.4.1",
     "react-dom": "16.4.1",
     "react-scripts-ts": "2.16.0",
-    "styled-components": "^3.3.3"
+    "styled-components": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
