--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "bologna-js-lottery",
-  "version": "0.1.0",
+  "name": "bolognajs-meetup-ui-checkin",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "axios": "0.18.0",
     "react": "16.4.1",
     "react-dom": "16.4.1",
+    "react-router": "4.3.1",
+    "react-router-dom": "4.3.1",
     "react-scripts-ts": "2.16.0",
     "styled-components": "3.3.3"
   },
@@ -20,6 +22,7 @@
     "@types/node": "10.3.6",
     "@types/react": "16.4.2",
     "@types/react-dom": "16.0.6",
+    "@types/react-router-dom": "4.2.7",
     "typescript": "2.9.2"
   }
 }
