--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
     "react-scripts-ts": "2.16.0",
+    "serve": "^9.1.0",
     "styled-components": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "now-start": "serve --single ./build"
   },
   "devDependencies": {
     "@types/jest": "23.1.2",
