--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "axios": "0.18.0",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
+    "react": "16.8.3",
+    "react-dom": "16.8.3",
     "react-router": "4.3.1",
     "react-router-dom": "4.3.1",
-    "react-scripts-ts": "2.16.0",
-    "serve": "^9.1.0",
-    "styled-components": "3.3.3"
+    "react-scripts-ts": "3.1.0",
+    "serve": "10.1.2",
+    "styled-components": "4.1.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -20,11 +20,12 @@
     "now-start": "serve --single ./build"
   },
   "devDependencies": {
-    "@types/jest": "23.1.2",
-    "@types/node": "10.3.6",
-    "@types/react": "16.4.2",
-    "@types/react-dom": "16.0.6",
-    "@types/react-router-dom": "4.2.7",
-    "typescript": "2.9.2"
+    "@types/jest": "24.0.9",
+    "@types/node": "11.10.4",
+    "@types/react": "16.8.6",
+    "@types/react-dom": "16.8.2",
+    "@types/react-router-dom": "4.3.1",
+    "@types/styled-components": "4.1.11",
+    "typescript": "3.3.3333"
   }
 }
